# Recast

./: .gitignore  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: auto-commit.sh
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli.md  configuration.md  gui.md  index.md  installation.md  multi-show.md  pipeline.md  quickstart.md  updating.md
recast/: __init__.py  __main__.py  cli.py  config.py  logging.py  queue.py  server.py  updater.py  watcher.py
recast/models/: __init__.py  cut.py  episode.py  job.py  show.py
recast/pipeline/: __init__.py  runner.py
recast/pipeline/prompts/: llm_pass.txt
recast/pipeline/stages/: llm_pass.py  metadata.py  normalize.py  reconcile.py  render.py  segment.py  transcribe.py
recast/publishing/: __init__.py  apple.py  rss.py
recast/static/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py  test_config.py  test_e2e.py  test_llm_pass.py  test_metadata.py  test_models.py  test_normalize.py  test_queue.py  test_reconcile.py  test_render.py  test_rss.py  test_runner.py  test_segment.py  test_server.py  test_transcribe.py  test_updater.py  test_watcher.py
